# atlas

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  ubuntu.yml
cmake/: Config.cmake.in
include/atlas/: greeter.hpp
include/atlas/core/: connection.hpp  error.hpp  result.hpp
include/atlas/detail/: type_utils.hpp
include/atlas/pg/: connection.hpp  error.hpp  result.hpp  types.hpp
include/atlas/query/: aggregate.hpp  builder.hpp  expr.hpp  insert.hpp  join.hpp  predicate.hpp  remove.hpp  select.hpp  source.hpp  sql_serialize.hpp  update.hpp
include/atlas/schema/: column.hpp  constraints.hpp  ddl.hpp  serde.hpp  storage.hpp  table.hpp  type_traits.hpp
scripts/: rename_project.sh
src/: greeter.cpp
src/pg/: connection.cpp  result.cpp
src/pg/detail/: libpq_handles.hpp  result_access.hpp  result_handle_adopter.hpp
src/query/: sql_serialize.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
test/: CMakeLists.txt
test/schema/: test_column.cpp  test_ddl.cpp  test_serde.cpp  test_table.cpp  test_type_traits.cpp
test/src/: connection_test.cpp  greeter_test.cpp  version_test.cpp
test/src/query/: test_aggregate.cpp  test_expr.cpp  test_insert.cpp  test_join.cpp  test_predicate.cpp  test_remove.cpp  test_select.cpp  test_sql_serialize.cpp  test_update.cpp
test/src/schema/: test_column.cpp  test_ddl.cpp  test_serde.cpp  test_table.cpp  test_type_traits.cpp
